--- a/css/vertical.css
+++ b/css/vertical.css
@@ -34,6 +34,7 @@
      * Attribute scrollbar-gutter set as placeholder to unsupported platforms.
      */
     overflow: overlay;
+    scrollbar-color: #aaa transparent;
     scrollbar-gutter: stable;
     scrollbar-width: thin;
     scroll-behavior: smooth;
